<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sueling"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/spain_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/petici_n_de_presupuesto_para_instalaci_n_de_suelo_radiante"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtEmailRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/repita_su_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtMetrosCuadrados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/m_de_su_vivienda"
            android:inputType="number"
            android:minHeight="48dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_suelo_deseado" />

            <RadioButton
                android:id="@+id/rbElectrico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/el_ctrico"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbAgua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/por_agua" />
        </RadioGroup>

        <EditText
            android:id="@+id/edtObservaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/datos_que_considere_que_podr_an_afectar_a_la_instalaci_n"
            android:inputType="textMultiLine"
            android:maxLines="20" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:minHeight="48dp"
            android:text="@string/deseo_recibir_informaci_n_peri_dica_promocional" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:text="@string/deseo_recibir_la_revista_t_cnica_mensual_sobre_novedades_en_el_sector" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="140dp"
            android:text="@string/enviar_petici_n" />

    </LinearLayout>
</ScrollView>